# calendarbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COPYING  Cargo.toml  Dockerfile  docker-compose.dev.yaml  flake.nix
.github/workflows/: build-and-check.yaml  build-docker.yaml  deploy.yaml
db/: mod.rs
migrations/: 20240212093627_init.sql
migrations/2024-02-21-161811_init/: down.sql  up.sql
src/: calendar.rs  commands.rs  discord.rs  main.rs  models.rs  schema.rs  secrets.rs  types.rs
src/commands/: utilities.rs
src/db/: calendar.rs  mod.rs  types.rs
